--- a/src/AutoMapper.Extensions.UnitTesting/AutoMapper.Extensions.UnitTesting.csproj
+++ b/src/AutoMapper.Extensions.UnitTesting/AutoMapper.Extensions.UnitTesting.csproj
@@ -54,11 +54,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="AutoMapperExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutoMapper.Extensions\AutoMapper.Extensions.csproj">
+      <Project>{c0eb6fc7-f487-4152-9957-fa526323dcc2}</Project>
+      <Name>AutoMapper.Extensions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
