--- a/src/AutoMapper.Extensions/AutoMapper.Extensions.csproj
+++ b/src/AutoMapper.Extensions/AutoMapper.Extensions.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AutoMapperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
