adding method body reader

--- a/src/AutoMapper.Extensions/AutoMapper.Extensions.csproj
+++ b/src/AutoMapper.Extensions/AutoMapper.Extensions.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperExtensions.cs" />
+    <Compile Include="IL\MethodBaseRocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
