--- a/src/AutoMapper.Extensions.UnitTesting/AutoMapper.Extensions.UnitTesting.csproj
+++ b/src/AutoMapper.Extensions.UnitTesting/AutoMapper.Extensions.UnitTesting.csproj
@@ -49,7 +49,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -57,6 +59,7 @@
     <Compile Include="AutoMapperExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="AutoMapperExtensionsILTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
